--- a/Header/css/anmeldung.css
+++ b/Header/css/anmeldung.css
@@ -1,9 +1,9 @@
 /* General Styling */
 body {
     font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: float;
+    justify-content: left;
+    align-items: left;
     height: 100vh;
     margin: 0;
     background-color: #f0f0f0;
@@ -11,7 +11,7 @@ body {
 
 /* Container Styling */
 .icon-button-container {
-    text-align: center;
+    text-align: left;
     background: white;
     padding: 20px;
     border-radius: 8px;
