--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,11 @@
 }
 
 :root {
-    --img-width: 200px;
+    --img-width: 500px;
+    --img-height:400px;
+    --btn-border-radius:8%;
+    --max-min-width:70px;
+    --test-border:solid 2px blue;
   }
   
 body{
@@ -19,97 +23,128 @@ body{
 .filter-form{
     display:flex;
     flex-direction: row;
-    gap:80px;
-    width:70%;
+    gap:50px;
+    width:fit-content;
     justify-content: center;
     margin: 120px 0;
+    font-size: x-large;
+    
+    
 }
 .filter-bar{
-    border: 2px solid red;
-    margin-bottom: 120px;
-    text-align: center;
-
-
-}
-.filter-form div{
-    display:flex;
-}
-.filter-form div input{
-    max-width: 70px;
-}
-
-
-
-
-
-
-
-
-/*--------------Filter Bar----------------------
-#ilter-bar{
-    display:flex;
-    flex-direction:row;
-    gap:80px;
-    justify-content: center;
-    margin-bottom: 120px;
-
-}
-.filter-option{
-    border: 2px solid black;
-    padding: 5px;
-    display: flex;
-    flex-direction: row;
-    width:fit-content;
-    align-content: center;
-    justify-content: center;
-}
-.ilter-container{
-    position: relative;
-    display: block;  
-}
-.dropdown-content{
-    position:absolute;
-    display:none;
-    border: 2px solid gray;
     
-}
-.visible{
-    display:block;
-    
-}
-.filter-option:after {      
-content: url("../icons/keyboard_arrow_down.svg");
-} 
-.ilter-form{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 10px;
-    justify-items: center;
+    width:100%;
+    justify-content: center;
     align-items: center;
-    padding:10px;
-    }
-    .ilter-form *{
-        margin: 10px;
-        width: 80px;
-        }
-    .filter-btn{
-        grid-column: 1/-1;
-    }*/
+
+    display:flex;
+    flex-direction: row;
+    gap:15px;
+
+
+
+}
+.filter-form #city-input{
+    width: 200px;
+    grid-column: 1/3;
+}
+
+.filter-form div{
+   
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 3px;
+    column-gap: 3px;
+    
+
+}
+.filter-form div *:nth-child(1){
+    
+    width:100%;
+    grid-column: 1/3;
+    grid-row:1/2;
+}
+.filter-form div *:nth-child(2){
+
+    width:var(--max-min-width);
+    grid-column: 1/2;
+    grid-row:2/3;
+}
+.filter-form div *:nth-child(3){
+    width:var(--max-min-width);
+    grid-column: 2/3;
+    grid-row:2/3;
+    
+}
+
+
+
+.btn{
+border-radius: var(--btn-border-radius);
+}
+.submit-filter {
+    border-radius: var(--btn-border-radius); 
+    background-color: #FFCC00;
+    font-weight: bold;
+    font-size: 15px;
+    padding: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width:fit-content;
+    border-color:  #DDDDDD ;
+    border:none;
+    
+
+}
+.submit-filter:hover{
+    background-color:  #E6B800;
+    cursor: pointer;
+    
+}
+.clear-filter {
+    border:none;
+    cursor: pointer;
+}
+.clear-filter *{
+    height: 40px;
+    width:40px;
+}
+
+
+
+
+
+
+
+
+    
+    
 /*-----------------Scroller----------------------------*/
+.scroll-list{
+    display:flex;
+    flex-direction: column;
+    gap: 25px;
+    margin-bottom: 8px;
+    
+}
+
 .appartment-card{
 
-    width:fit-content;
-    border:solid 2px blue;  
+    width:var(--img-width);
+    -webkit-box-shadow: 0px 0px 28px 8px rgba(157,172,193,0.87); 
+    box-shadow: 0px 0px 28px 8px rgba(157,172,193,0.87);
+    border-radius: var(--btn-border-radius);
+
+}
+.appartment-card *{
+    border-radius: inherit;
 }
 .img-scroller-container{
-
-    border: 2px solid rebeccapurple;
-    width: 400px;
+    width: var(--img-width);
+    height: var(--img-height);
     overflow: hidden;
     position:relative;
-
-    
-
     
 }
 
@@ -118,16 +153,20 @@ content: url("../icons/keyboard_arrow_down.svg");
     display:flex;
     flex-direction: row;
     width: fit-content;
-    
+    height: 100%;
 }
 img{
     
     width:100%;
     height: 100%;
     object-fit: cover;
+    flex-shrink:0;
+    
     
 
 }
+
+
 .arrow{
     cursor:pointer;
     position:absolute;
@@ -142,6 +181,18 @@ img{
 .arrow-left{
     left:0;
 }
+.count-scroll{
+    position:absolute;
+    z-index: 100;
+    bottom: 0;
+    font-family: 'Arial, Helvetica, sans-serif';
+    font-size: 40px;
+    color:#173660;
+    text-shadow: 2px 2px 4px orange;
+    left:8px;
+    
+}
+
 /*------------------------------Info Card-----------------------------------*/
 .adresse::before{
     content: url("../icons/location.svg");
@@ -169,14 +220,20 @@ img{
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 2px;
     column-gap: 2px;
-    border:solid 2px black;
     width: 100%;
     padding:20px;
+    
 
 }
+
 .appartment-info *{
     margin:0;
     padding:0;  
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
+   
 
 }
 .titel{
