Nachricht wird in der DB gespeichert

--- a/stylesKontSeit.css
+++ b/stylesKontSeit.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #F0EAD2;
@@ -53,6 +58,29 @@ h1 {
     font-weight: bold;
     color: #6C584C;
     text-align: center;    
-    display: inline-block;
-    background-color: #DDE5B6;
+    
+}
+
+/* .frage {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    max-width: 610px;
+    margin: 0 auto;
+}*/
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.items {
+    background-color: #A98467;
+    border-radius: 10px;
+}
+
+.items-hover {
+    filter: grayscale(75%);
+    cursor: pointer;
+    transition: .3s;
 }
