--- a/frontend/login.css
+++ b/frontend/login.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f5f5f5; /* Базовый пастельный фон */
+    background-color: #f5f5f5; 
 }
 
 .container {
@@ -54,7 +54,7 @@ body {
 }
 
 .btn-primary {
-    background-color: #ffcc00; /* Яркая желтая кнопка */
+    background-color: #ffcc00; 
     border: none;
     color: #333;
     padding: 10px 20px;
@@ -73,27 +73,27 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #F7F9FC; /* Пастельный цвет фона */
+    background-color: #F7F9FC; 
 }
 
 .container {
     display: flex;
-    width: 80%; /* Ширина контейнера */
-    height: 100%; /* Важно: Родительский контейнер должен задавать высоту */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Тень */
-    border-radius: 10px; /* Скругленные углы */
+    width: 80%; 
+    height: 100%; 
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
+    border-radius: 10px; 
     overflow: hidden;
 }
 
 .left-side {
     flex: 1;
-    background-color: #fff; /* Белый фон для формы */
+    background-color: #fff; 
     padding: 20px;
 }
 
 .right-side {
     width: 60%;
-    height: 100%; /* Устанавливаем высоту правой стороны 100% */
+    height: 100%; 
     background-image: url('/Abschlussprojekt/images/anmeldung.jpg');
     background-size: cover;
     background-position: center;
@@ -103,18 +103,18 @@ body {
     display: flex;
     width: 100%;
     max-width: 1800px;
-    height: 100vh; /* Сделать высоту контейнера 100% от высоты окна */
+    height: 100vh; 
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     border-radius: 10px;
     overflow: hidden;
 }
 .logo {
-    max-width: 300px; /* Максимальная ширина логотипа */
-    height: auto; /* Пропорциональная высота */
-    margin-bottom: 15px; /* Отступ снизу, чтобы логотип не сливался с текстом */
+    max-width: 300px; 
+    height: auto; 
+    margin-bottom: 15px; 
 }
 
 button.mb-3 {
-    margin-bottom: 10px; /* Отступ снизу между кнопками */
+    margin-bottom: 10px; 
 }
