--- a/Meine_Anzeige_styles.css
+++ b/Meine_Anzeige_styles.css
@@ -22,8 +22,8 @@ body {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
-    background-color: #007BFF;
-    color: white;
+    background-color: #dddfe0;
+    color: rgb(6, 6, 6);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -31,7 +31,7 @@ body {
 }
 
 #neue-anzeige:hover {
-    background-color: #0056b3;
+    background-color: #999a9b;
 }
 
 /* Стиль для блока объявлений */
@@ -104,37 +104,16 @@ body {
     border-radius: 5px;
     font-size: 14px;
     cursor: pointer;
+    transition: background-color 0.3s ease; /* Анимация при наведении */
+    
 }
 
-#anzeige-form button[type="submit"] {
-    background-color: #28a745;
-    color: white;
+
+#anzeige-form button:hover {
+    background-color: #d3d3d4; /* Более тёмный синий при наведении */
 }
 
-#anzeige-form button[type="submit"]:hover {
-    background-color: #218838;
-}
 
-#anzeige-form button[type="button"] {
-    background-color: #dc3545;
-    color: white;
-}
-
-#anzeige-form button[type="button"]:hover {
-    background-color: #c82333;
-}
-
-/* Фон для затемнения при открытой форме */
-#anzeige-form-container::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: -1;
-}
 
 /* Мобильные устройства */
 @media (max-width: 768px) {
