--- a/styles/index.css
+++ b/styles/index.css
@@ -1,277 +1,247 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 :root {
-    --img-width: 700px;
-    --img-height:400px;
-    --btn-border-radius:8%;
-    --max-min-width:70px;
-    --test-border:solid 2px blue;
-  }
-  
-body{
+    --img-width: 45vw;
+
+    --img-height: 400px;
+    --btn-border-radius: 8%;
+    --card-border-radius: 5%;
+    --max-min-width: 70px;
+    --test-border: solid 2px blue;
+    --filter-input-height: 40px;
+}
+
+.hidden {
+    display: none;
+}
+
+html {
+    font-size: 16px;
+}
+
+#body-main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    height: fit-content;
+    width: 100%;
 }
 
-/*----------------------Neue--------------------------------*/
-.filter-form{
-    display:flex;
-    flex-direction: row;
-    gap:50px;
-    width:fit-content;
-    justify-content: center;
-    margin: 120px 0;
-    font-size: x-large;
-    
-    
+#footer-div {
+    flex: 0;
 }
-.filter-bar{
-    
-    width:100%;
-    justify-content: center;
+
+#main-content-container {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-
-    display:flex;
-    flex-direction: row;
-    gap:15px;
-
-
-
-}
-.filter-form #city-input{
-    width: 200px;
-    grid-column: 1/3;
+    width: 100%;
+    min-height: 100vh;
+    flex: 1;
 }
 
-.filter-form div{
-   
-    display:grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    row-gap: 3px;
-    column-gap: 3px;
-    
-
-}
-.filter-form div *:nth-child(1){
-    
-    width:100%;
-    grid-column: 1/3;
-    grid-row:1/2;
-}
-.filter-form div *:nth-child(2){
-
-    width:var(--max-min-width);
-    grid-column: 1/2;
-    grid-row:2/3;
-}
-.filter-form div *:nth-child(3){
-    width:var(--max-min-width);
-    grid-column: 2/3;
-    grid-row:2/3;
-    
-}
-
-
-
-.btn{
-border-radius: var(--btn-border-radius);
-}
-.submit-filter {
-    border-radius: var(--btn-border-radius); 
-    background-color: #FFCC00;
-    font-weight: bold;
-    font-size: 15px;
-    padding: 3px;
-    padding-left: 5px;
-    padding-right: 5px;
-    width:fit-content;
-    border-color:  #DDDDDD ;
-    border:none;
-    
-
-}
-.submit-filter:hover{
-    background-color:  #E6B800;
+#scroll-up-btn {
+    border-radius: 100%;
+    background-color: black;
+    min-width: 80px;
+    min-height: 80px;
+    position: fixed;
+    bottom: 80px;
+    right: 80px;
     cursor: pointer;
-    
-}
-.clear-filter {
-    border:none;
-    cursor: pointer;
-}
-.clear-filter *{
-    height: 40px;
-    width:40px;
+    align-items: center;
+    justify-content: center;
 }
 
 
 
-
-
-
-
-
-    
-    
-/*-----------------Scroller----------------------------*/
-.scroll-list{
-    display:flex;
+/*-----------------Image Scroller----------------------------*/
+.scroll-list {
+    display: flex;
     flex-direction: column;
     gap: 25px;
     margin-bottom: 8px;
-    
+    align-items: center;
+    width: 100%;
 }
 
-.appartment-card{
-
-    width:var(--img-width);
-    -webkit-box-shadow: 0px 0px 28px 8px rgba(157,172,193,0.87); 
-    box-shadow: 0px 0px 28px 8px rgba(157,172,193,0.87);
-    border-radius: var(--btn-border-radius);
-
+.appartment-card {
+    width: var(--img-width);
+    -webkit-box-shadow: 0px 0px 28px 8px rgba(157, 172, 193, 0.87);
+    box-shadow: 0px 0px 28px 8px rgba(157, 172, 193, 0.87);
+    border-radius: var(--card-border-radius);
 }
-.appartment-card *{
+
+.appartment-card * {
     border-radius: inherit;
 }
-.img-scroller-container{
+
+.img-scroller-container {
     width: var(--img-width);
     height: var(--img-height);
     overflow: hidden;
-    position:relative;
-    
+    position: relative;
 }
 
-.img-inner-container{
-
-    display:flex;
+.img-inner-container {
+    display: flex;
     flex-direction: row;
     width: fit-content;
     height: 100%;
 }
-img{
-    
-    width:100%;
+
+img {
+    width: 100%;
     height: 100%;
     object-fit: cover;
-    flex-shrink:0;
-    
-    
+    flex-shrink: 0;
 
 }
 
 
-.arrow{
-    cursor:pointer;
-    position:absolute;
-    bottom:200px;
-} 
-.arrow-right{
-    right:0;
-    
+.arrow {
+    cursor: pointer;
+    position: absolute;
+    bottom: 40%;
+
+}
+
+.arrow-right {
+    right: 0;
+
 }
 
 
-.arrow-left{
-    left:0;
+.arrow-left {
+    left: 0;
 }
-.count-scroll{
-    position:absolute;
+
+.count-scroll {
+    position: absolute;
     z-index: 100;
-    bottom: 0;
+    bottom: 4%;
     font-family: 'Arial, Helvetica, sans-serif';
-    font-size: 40px;
-    color:#173660;
+    font-size: 45px;
+    color: #173660;
     text-shadow: 2px 2px 4px orange;
-    left:8px;
-    
+    left: 4%;
+
 }
 
 /*------------------------------Info Card-----------------------------------*/
-.adresse::before{
+.adresse::before {
     content: url("../icons/location.svg");
-    
-}
-.adresse::before{
-    content: url("../icons/location.svg");
-    
+
 }
 
-.info-icon {
-    /*color: orange;  */   
-    }
-.info-icon path{
-    fill:currentColor;
+.adresse::before {
+    content: url("../icons/location.svg");
+
 }
-.info-item :nth-child(2){
+
+
+.info-icon path {
+    fill: currentColor;
+}
+
+.info-item :nth-child(2) {
     font-weight: bold;
+    font-size: 1.5rem;
+    color: #333;
+    margin-top: 2%;
 
 }
-.icon-submit-btn{
-    border:none;
+
+.info-item :nth-child(1) {
+    color: #333;
+    font-size: 1rem;
+}
+
+.icon-submit-btn {
+    border: none;
 
 }
 
 
 /*-------------------Grid stracture of info cards--------------------------------*/
-.appartment-info{
-    display:grid;
+.appartment-info {
+    display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 2px;
     column-gap: 2px;
     width: 100%;
-    padding:20px;
-    
+    padding: 40px;
+    height: fit-content;
+
+
 
 }
 
-.appartment-info *{
-    margin:0;
-    padding:0;  
+.appartment-info * {
+    margin: 0;
+    padding: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 
-   
+
+
+
+
 
 }
-.titel{
-    color:black;
-    text-decoration:none;
+
+.titel {
+    color: #333;
     grid-column: 1/4;
-    grid-row:1/2;
+    grid-row: 1/2;
+    font-size: 1.3rem;
+
+
 
 }
-.adresse{
+
+.adresse {
     grid-column: 1/4;
-    grid-row:2/3;
+    grid-row: 2/3;
+    font-size: 1rem;
+
 
 }
-.wohnfläche{
+
+.wohnfläche {
     grid-column: 1/2;
-    grid-row:3/4;
+    grid-row: 3/4;
 
 }
-.kaltmiete{
+
+.kaltmiete {
     grid-column: 2/3;
-    grid-row:3/4;
-    
+    grid-row: 3/4;
+
 }
-.zim-zahl{
+
+.zim-zahl {
     grid-column: 3/4;
-    grid-row:3/4;
+    grid-row: 3/4;
 
 }
-.like-btn{
+
+.like-btn {
     grid-column: 4/5;
-    grid-row:1/2;
+    grid-row: 1/2;
     place-self: center;
+    cursor: pointer;
 
 }
+
+.adresse {
+    color: blue;
+}
+
+/*----------------------------Media------------------------------------*/
